--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
 <header>
-    <a class="nazwastrony" href="webstudio.com">WebStudio</a>
-    <a class="odnośnik" href="">Agencja</a>
-    <h4>Portfolio</h4>
-    <h4>Kontakt</h4></div>
+    <a class="link" href="webstudio.com"><p class="webstudio">WebStudio</p></a>
+    <nav>
+        <ul>
+            <li><a class="odnośnik" href="">Agencja</a></li>
+            <li><a class="odnośnik" href="">Portfolio</a></li>
+            <li><a class="odnośnik" href="">Kontakt</a></li>
+        </ul>
+    </nav>
     <a class="contact-links" href="mail info@devstudio.com"
               >info@devstudio.com</a>
         info@devstudio.com
@@ -23,84 +27,82 @@
               >+48 111 111 111</a>
 </header>
 <main>
-<div class="wrapper">
+    <section class="duzynapis">
     <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU </h1>
     <button class="usługa"
         type="button">
-        Zamów usługe
-</button>
-</div>
-<div><h3>LOREM IPSUM</h3>
-<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></div>
-<div><h3>LOREM IPSUM</h3>
-<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></div>
-<div><h3>LOREM IPSUM</h3>
-<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></div>
-<div><h3>LOREM IPSUM</h3>
-<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></div>
-<div><h2>Czym się zajmujemy</h2></div>
-<table>
-    <tr>
-        <td><img src="img.jpeg"
+        Zamów usługe</button>
+</section>
+<section class="loremipsum">
+    <ul>
+<li>
+<h3>LOREM IPSUM</h3>
+<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+</li>
+<li><h3>LOREM IPSUM</h3>
+<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
+<li><h3>LOREM IPSUM</h3>
+<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
+<li><h3>LOREM IPSUM</h3>
+<p class="tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
+</ul>
+</section>
+<section>
+<h2>Czym się zajmujemy</h2>
+<ul>
+    <li>
+    <img src="images/img.jpeg"
             width="370"
-            alt="zdjęcie komputer"/></td>
-    </tr>
-    <tr><td><img src="t2.jpeg"
+            alt="zdjęcie komputer"/>
+            </li>
+    <li><img src="images/t2.jpeg"
         width="370"
-        alt="zdjęcie t2"/></td></td>
-    </tr>
-        <tr>
-            <td><img src="klawiatura.jpeg"
+        alt="zdjęcie t2"/></li>
+    <li><img src="images/klawiatura.jpeg"
             width="370"
-            alt="zdjęcie klawiatura"/></td></td></tr>
-</table>
+            alt="zdjęcie klawiatura"/></li>
+</section>
+<div class="naszzespół">
 <div><h2>Nasz zespół</h2></div>
 <table>
     <tr>
-        <td><img src="u.jpeg"
+        <td><img src="images/u.jpeg"
             width="370"
             alt="zdjęcie u"/>
         <h5>John Doe</h5>
     <h6>Product Designer</h6></td>
     </tr>
     <tr>
-        <td><img src="blonde.jpeg"
+        <td><img src="images/blonde.jpeg"
         width="370"
         alt="zdjęcie blonde"/>
         <h5>John Doe</h5>
         <h6>Frontend Developer</h6></td>
     </tr>
         <tr>
-            <td><img src="w.jpeg"
+            <td><img src="images/w.jpeg"
             width="370"
             alt="zdjęcie w"/>
             <h5>John Doe</h5>
             <h6>Marketing</h6></td>
         </tr>
             <tr>
-                <td><img src="o.jpeg"
+                <td><img src="images/o.jpeg"
                 width="370"
                 alt="zdjęcie o"/></td>
                 <h5>John Doe</h5>
                 <h6>UI Designer</h6></td>
             </tr>
 </table>
-
-
+</div>
+</main>  
 <footer>
     <h2>WebStudio</h2>
     <address>m. Warszawa, Aleje Jerozolimskie 21/
-    <a href="mail toinfo@example.com"
+    <a class="danekontaktowe" href="mail toinfo@example.com"
               >info@example.com</a>
-              <a href="tel:+48 111 111 111"
-              >+48 111 111 111</a></address></footer>
-</main>
-
-
-
-
-
-
-    
+              <a class="danekontaktowe" href="tel:+48 111 111 111"
+              >+48 111 111 111</a></address>
+</footer>
 </body>
 </html>
