--- a/index.html
+++ b/index.html
@@ -61,40 +61,43 @@
     <li><img src="images/klawiatura.jpeg"
             width="370"
             alt="zdjęcie klawiatura"/></li>
-</section>
-<div class="naszzespół">
-<div><h2>Nasz zespół</h2></div>
-<table>
-    <tr>
-        <td><img src="images/u.jpeg"
+</section class="naszzespół">
+<h2>Nasz zespół</h2>
+<ul>
+    <li>
+    <figure><img src="images/u.jpeg"
             width="370"
             alt="zdjęcie u"/>
-        <h5>John Doe</h5>
-    <h6>Product Designer</h6></td>
-    </tr>
-    <tr>
-        <td><img src="images/blonde.jpeg"
+            <figcaption>John Doe
+    Product Designer</figcaption>
+</figure>
+</li>
+    <li>
+        <figure>
+            <img src="images/blonde.jpeg"
         width="370"
         alt="zdjęcie blonde"/>
-        <h5>John Doe</h5>
-        <h6>Frontend Developer</h6></td>
-    </tr>
-        <tr>
-            <td><img src="images/w.jpeg"
+        <figcaption>John Doe
+        Frontend Developer</figcaption>
+        </figure>
+    </li>
+    <li>
+        <figure>
+            <img src="images/w.jpeg"
             width="370"
             alt="zdjęcie w"/>
-            <h5>John Doe</h5>
-            <h6>Marketing</h6></td>
-        </tr>
-            <tr>
-                <td><img src="images/o.jpeg"
+            <figcaption>John Doe Marketing</figcaption>
+        </figure>
+        </li>
+        <li>
+            <figure><img src="images/o.jpeg"
                 width="370"
                 alt="zdjęcie o"/></td>
-                <h5>John Doe</h5>
-                <h6>UI Designer</h6></td>
-            </tr>
-</table>
-</div>
+                <figcaption>John Doe
+                UI Designer</figcaption>
+            </figure>
+            </li>
+        </ul>
 </main>  
 <footer>
     <h2>WebStudio</h2>
